2006-11-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c:
	* ChangeLog: revert r66281 and r66836. It should make mod_mono work
	again for most of the people, while it will break for certain virtual
	host configurations.

2006-11-02  Wade Berrier  <wberrier@novell.com>

	* configure.in: bump version -> 1.2

2006-10-26  Marek Habersack  <grendello@gmail.com>

	* man/mod_mono.8.in: describe the new MonoUnixUmask directive.
	* src/mod_mono.c: add code to handle the new configurable umask
	directive.

2006-10-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: avoid using too much memory for long responses.
	* src/mod_mono.h: defines for 1.3 to work with apr_pool. Fixes bug
	#79701. Thanks to Cyrille Colin.

2006-08-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: Fix problem in Solaris 9 due to alignment. Patch by
	Jonathan Zimmerman. Closes bug #78232.

2006-08-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* man/mod_mono.8.in:
	* src/mod_mono.[ch]: From now on, we run the mod-mono-server or
	mod-mono-server2 script instead of running mono directly. This is
	needed after the latest changes in the runtime that will make
	ShadowCopyFiles possible.

2006-08-03  Sebastien Pouliot  <sebastien@ximian.com>

	* man/mod_mono.8.in: Add documentation about MOD_MONO_CCV variable 
	used to control the validation of X.509 client certificates.

2006-08-02 Wade Berrier <wberrier@novell.com>

	* configure.in: Make sure CPPFLAGS get propogated

2006-08-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: make it work with the latest and greates apache 2.2.3
	and simplified.

2006-07-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: when using autoapplications, pass all the options that
	don't have an explicit alias to XXGLOBAL, which is the internal name
	used for the mod-mono-server instance that will create new applications
	on demand. Using XXGLOBAL as an identifier is forbidden now.
